# flaskapp_pdm

./: .gitignore  pyproject.toml
src/flaskapp/: main.py  prompt_text.json  requirements.txt
src/flaskapp/templates/: index.html
